--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-*.swp
+# Vim swap - taken from https://github.com/github/gitignore/blob/master/Global/Vim.gitignore
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
