--- a/files/corda-notary.conf
+++ b/files/corda-notary.conf
@@ -1,12 +1,12 @@
 basedir : "/opt/corda"
-p2pAddress : "node:10002"
-rpcAddress : "node:10003"
+p2pAddress : "notary:10002"
+rpcAddress : "notary:10003"
 webAddress : "0.0.0.0:10004"
 h2port : 11000
-myLegalName : "O=Bank_A, L=London, C=GB"
+myLegalName : "O=Notary, L=London, C=GB"
 keyStorePassword : "cordacadevpass"
 trustStorePassword : "trustpass"
-extraAdvertisedServiceIds: [ "" ]
+extraAdvertisedServiceIds: [ "corda.notary.simple" ]
 useHTTPS : false
 devMode : true
 
