--- a/nodes/banka/corda-banka.conf
+++ b/nodes/banka/corda-banka.conf
@@ -1,9 +1,9 @@
 basedir : "/opt/corda"
-p2pAddress : "bankb:10002"
-rpcAddress : "bankb:10003"
-webAddress : "0.0.0.0:10004"
+p2pAddress : "banka:10002"
+rpcAddress : "banka:10003"
+webAddress : "banka:10004"
 h2port : 11000
-myLegalName : "O=BankB, L=London, C=GB"
+myLegalName : "O=BankA, L=London, C=GB"
 keyStorePassword : "cordacadevpass"
 trustStorePassword : "trustpass"
 extraAdvertisedServiceIds: [ "" ]
