--- a/nodes/bankb/corda-bankb.conf
+++ b/nodes/bankb/corda-bankb.conf
@@ -1,9 +1,9 @@
 basedir : "/opt/corda"
-p2pAddress : "bankc:10002"
-rpcAddress : "bankc:10003"
-webAddress : "0.0.0.0:10004"
+p2pAddress : "bankb:10002"
+rpcAddress : "bankb:10003"
+webAddress : "bankb:10004"
 h2port : 11000
-myLegalName : "O=BankC, L=London, C=GB"
+myLegalName : "O=BankB, L=London, C=GB"
 keyStorePassword : "cordacadevpass"
 trustStorePassword : "trustpass"
 extraAdvertisedServiceIds: [ "" ]
