--- a/nodes/bankc/corda-bankc.conf
+++ b/nodes/bankc/corda-bankc.conf
@@ -1,9 +1,9 @@
 basedir : "/opt/corda"
-p2pAddress : "banka:10002"
-rpcAddress : "banka:10003"
-webAddress : "0.0.0.0:10004"
+p2pAddress : "bankc:10002"
+rpcAddress : "bankc:10003"
+webAddress : "bankc:10004"
 h2port : 11000
-myLegalName : "O=BankA, L=London, C=GB"
+myLegalName : "O=BankC, L=London, C=GB"
 keyStorePassword : "cordacadevpass"
 trustStorePassword : "trustpass"
 extraAdvertisedServiceIds: [ "" ]
