--- a/nodes/networkmap/corda-networkmap.conf
+++ b/nodes/networkmap/corda-networkmap.conf
@@ -1,19 +1,14 @@
 basedir : "/opt/corda"
-p2pAddress : "notary:10002"
-rpcAddress : "notary:10003"
-webAddress : "0.0.0.0:10004"
+p2pAddress : "networkmap:10002"
+rpcAddress : "networkmap:10003"
+webAddress : "networkmap:10004"
 h2port : 11000
-myLegalName : "O=Notary, L=London, C=GB"
+myLegalName : "O=Networkmap, L=London, C=GB"
 keyStorePassword : "cordacadevpass"
 trustStorePassword : "trustpass"
-extraAdvertisedServiceIds: [ "corda.notary.simple" ]
+extraAdvertisedServiceIds: [ "" ]
 useHTTPS : false
 devMode : true
-
-networkMapService {
-	address="networkmap:10002"
-	legalName="O=Networkmap, L=London, C=GB"
-}
 
 rpcUsers=[
     {
