--- a/nodes/notary/corda-notary.conf
+++ b/nodes/notary/corda-notary.conf
@@ -1,14 +1,19 @@
 basedir : "/opt/corda"
-p2pAddress : "networkmap:10002"
-rpcAddress : "networkmap:10003"
-webAddress : "0.0.0.0:10004"
+p2pAddress : "notary:10002"
+rpcAddress : "notary:10003"
+webAddress : "notary:10004"
 h2port : 11000
-myLegalName : "O=Networkmap, L=London, C=GB"
+myLegalName : "O=Notary, L=London, C=GB"
 keyStorePassword : "cordacadevpass"
 trustStorePassword : "trustpass"
-extraAdvertisedServiceIds: [ "" ]
+extraAdvertisedServiceIds: [ "corda.notary.simple" ]
 useHTTPS : false
 devMode : true
+
+networkMapService {
+	address="networkmap:10002"
+	legalName="O=Networkmap, L=London, C=GB"
+}
 
 rpcUsers=[
     {
